# Model-Representations

./: .editorconfig  .gitignore  Makefile  Project.toml  README.md  base.it  base_schema.json  decapodes.it  generate.jl  index.html  metadata_schema.json  ode.html  ontology.html  petri.html  pyproject.toml  references.html  regnet.html  search.json  test.js
.github/workflows/: docs.yml  integration-issues.yml  python_tests.yml  validate_examples.yml
SyntacticModels/: Project.toml  example.jl
SyntacticModels/src/: SyntacticModels.jl  SyntacticModelsBase.jl  amr.jl  composite_models.jl  decapodes.jl  uwd.jl
SyntacticModels/test/: amr_examples.jl  composite_models_examples.jl  decapodes_examples.jl  run_tests.jl  serialization_mwe.ipynb  serialization_mwe.jl  uwd_examples.jl
amr/: __init__.py  base.py  exceptions.py  petrinet.py
decapodes/: Manifest.toml  amr.py  amr_schema.json  askemdecapodes.py  askemdecapodes_schema.json  decapodeacset.py  decapodeacset_schema.json  decapodes.it  decapodes.py  decapodes_schema.json  generate.jl
decapodes/configuration/: decapodes.it  (+2 more)
docs/: .gitignore  _quarto.yml  index.qmd  ode.qmd  ontology.qmd  petri.qmd  references.bib  regnet.qmd
lib/: base.py  decapodes.py
multiphysics/: composite_physics-acset.json  composite_physics.json  flattened_composite.json  harmonic_oscillator-acset.json  harmonic_oscillator.json  hierarchical_composite.json  rst_relation.json
petrinet/: petrinet_schema.json
regnet/: lotka_volterra.md  regnet_schema.json
validation/: model_inventory.py  package-lock.json  package.json  test.js
(+180 files in other folders)
